# Hadamard

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Complex/: Complex.cpp  Complex.h
Helpers/: matplotlibcpp.h
HmdMatrix/: HmdMatrix.cpp  HmdMatrix.h  MatrixReader.cpp  MatrixReader.h
HmdVector/: HmdVector.cpp  HmdVector.h  VectorReader.cpp  VectorReader.h
Observables/: Observable.cpp  Observable.h
ParticleSystem/: ParticleSystem.cpp  ParticleSystem.h
QuantumCircuit/: DefaultGates.cpp  DefaultGates.h  QuantumCircuit.cpp  QuantumCircuit.h
QuantumMarbles/: QuantumBilliardBall.cpp  QuantumBilliardBall.h
Qubit/: Qubit.cpp  Qubit.h
